--- a/birds-frontend/public/src/index.css
+++ b/birds-frontend/public/src/index.css
@@ -14,3 +14,36 @@ body {
 .background {
     background-color: #F8F7F1;
 }
+
+.item {
+    width: 1050px;
+    height: 110px;
+    background-color: #FFFAFA;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    /*padding-left:20px;*/
+    /*padding-right:20px;*/
+    /*padding-top:5px;*/
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
+    position: relative;
+}
+
+.item:hover {
+    cursor: pointer;
+}
+
+.item_body {
+    width: 900px;
+    height: 110px;
+    background-color: #FFFAFA;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    float: left;
+}
+
+.horizont_float {
+    float: left;
+}
