--- a/birds-frontend/public/src/index.css
+++ b/birds-frontend/public/src/index.css
@@ -71,3 +71,48 @@ body {
     bottom: 0;
     margin-bottom: 16px;
 }
+
+.modal {
+    z-index: 9999;
+    position: absolute;
+    top: 20px;
+    margin-top: 20px;
+    left: 50%;
+    width: 700px;
+    min-height: 900px;
+    padding: 15px;
+    border-radius: 5px;
+    transform: translate(-50%);
+    background-color: #FFFAFA;
+}
+
+.modalImageWrapper {
+    width: 640px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    align-content: center;
+}
+
+.modalImage {
+    width: 640px;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.modalTitle {
+    color: #2C2921;
+    font-size: 25px;
+    font-family: var(--DEFAULT_FONT);
+    font-weight: 500;
+    text-align: center;
+    margin-top: 40px;
+}
+
+.modalText {
+    color: black;
+    font-size: 16px;
+    font-family: var(--DEFAULT_FONT);
+    font-weight: 100;
+}
