--- a/birds-frontend/public/src/index.css
+++ b/birds-frontend/public/src/index.css
@@ -116,3 +116,13 @@ body {
     font-family: var(--DEFAULT_FONT);
     font-weight: 100;
 }
+
+.bg {
+    z-index: 9998;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.6);
+}
