--- a/birds-frontend/src/index.css
+++ b/birds-frontend/src/index.css
@@ -50,6 +50,7 @@ body {
 
 .bird_name_text {
     color: #2C2921;
+    font-weight: normal;
 }
 
 .image {
@@ -115,13 +116,15 @@ body {
     font-size: 16px;
     font-family: var(--DEFAULT_FONT);
     font-weight: 100;
+    padding: 20px 30px 40px 30px;
+    line-height: 1.5;
 }
 
 .bg {
     z-index: 9998;
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 2000px;
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.6);
