--- a/birds-frontend/src/index.css
+++ b/birds-frontend/src/index.css
@@ -130,3 +130,30 @@ body {
     left: 0;
     background: rgba(0, 0, 0, 0.6);
 }
+
+.openForm {
+    background-color: #FFFAFA;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
+    z-index: 999;
+    position: fixed;
+    height: 60px;
+    width: 200px;
+    top: 40px;
+    right: 50px;
+}
+
+.openForm:hover {
+    cursor: pointer;
+}
+
+.openFormTitle {
+    color: #2C2921;
+    font-size: 22px;
+    font-family: var(--DEFAULT_FONT);
+    font-weight: 400;
+    text-align: center;
+    margin-top: 16px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+}
